enum GroupMemberRole {
  owner(0),
  admin(1),
  member(2);

  final int value;
  const GroupMemberRole(this.value);

  static GroupMemberRole fromValue(int value) {
    return GroupMemberRole.values.firstWhere(
...
